<resources>
    <string name="app_name">Jams Store</string>
    <string name="logojamsstore">logoJamsStore</string>
    <string name="IniciarSesión">Iniciar Sesión</string>
    <string name="campodireccioncorreo">Dirección correo electrónico</string>
    <string name="email">Email</string>
    <string name="direcci_n_de_correo_electr_nico">Dirección de correo electrónico</string>
    <string name="correoEjemplo">correo@gmail.com</string>
    <string name="contrase_a">Contraseña</string>
    <string name="tucontrase_a">Tu contraseña</string>
    <string name="logo_jams_market">logo</string>
    <string name="no_puedo_iniciar_sesi_n">No puedo iniciar sesión</string>
    <string name="mensaje_crear_cuenta">¿No tiene una cuenta?</string>
    <string name="boton_crear_cuenta">Cree una</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mensaje_codigo_seguridad">Introduce el código de seguridad para continuar</string>
    <string name="mensaje_introducir_codigo">Introduce el código de seguridad que hemos enviado a</string>
    <string name="empty_string">0</string>
    <string name="reenviar_codigo">Reenviar código</string>
    <string name="confirmar">Confirmar</string>
    <string name="Crear_cuenta">Crear una cuenta</string>
    <string name="mensaje_iniciar_sesion">Ya tiene una cuenta?</string>
    <string name="mensaje_fecha_nacimiento">Introduce tu fecha de nacimiento. La necesitamos para una navegación divertida y segura según tu edad.</string>
    <string name="dia">Día</string>
    <string name="mes">Mes</string>
    <string name="año">Año</string>
    <string name="continuar">Continuar</string>
    <string name="pol_tica_de_privacidad">Política de privacidad</string>
    <string name="Pais">Nombre país</string>
    <string name="campo_pais">País</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="acuerdo_condiciones">He leido y estoy deacuerdo con los terminos y condiciones</string>
    <string name="mensaje_inicar_sesion">Ya tiene una cuenta?</string>
    <string name="politica_privacidad">Política de privacidad</string>
    <string name="gerente_de_inventario">Gerente de inventario</string>
    <string name="producto">Producto</string>
    <string name="categor_a">Categoría</string>
    <string name="stock_disponible">Stock disponible</string>
    <string name="precio">Precio</string>
    <string name="ltima_actualizaci_n">Última actualización</string>
    <string name="acci_n">Acción</string>
    <string name="registrar_producto">Registrar producto</string>
    <string name="boton_retroceder">Boton para retroceder</string>
    <string name="gestionar_usuario">Gestionar usuario</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo</string>
    <string name="guardar">Guardar</string>
    <string name="mensaje_borrar_usuario">Desea borrar el usuario?</string>
    <string name="borrar_usuario">Borrar usuario</string>


</resources>